--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
           <h1>Gabriel Ternes</h1>
           <h3>Estudante de Desenvolvimento Back-end</h3>
           <h3>Unilasalle</h3>
+        <div class="linguagens">
+          <h3>Linguagens que estou aprendendo </h3>
+          <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+          <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+          <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg">
+          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" />
+          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/go/go-original-wordmark.svg">
+          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
+          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
         </div>
+      </div>
       </div>
       <div class="tema">
         <button onclick="mudaTema()">Alterar tema</button>
@@ -28,9 +39,9 @@
       <div class="projetos">
         <ul class="projetos-titulo">Projetos</ul>
         <li class="projetos-item"><a href="https://github.com/GabrielTernesSan/Xadrez-Java">♟️ Xadrez Javeiro</a></li>
+        <li class="projetos-item"><a href="https://github.com/GabrielTernesSan/dsmovie">🎬 DsMovie - Java Web</a></li>
         <li class="projetos-item"><a href="https://github.com/GabrielTernesSan/Monitor-De-Sites">💻 Monitor de Sites GoLang</a></li>
         <li class="projetos-item"><a href="https://github.com/GabrielTernesSan/Lojinha">🏪 CRUD GoLang</a></li>
-        <li class="projetos-item"><a href="https://github.com/GabrielTernesSan/dsmovie">🎬 DsMovie - Java Web</a></li>
       </div>
       <div class="contato">
         <ul class="contato-titulo">Contato</ul>
