--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <ul class="contato-titulo">Contato</ul>
         <li class="contato-item"><a href="https://www.linkedin.com/in/gabrielternes/">🧑‍💼 Linkedin</a></li>
         <li class="contato-item"><a href="https://github.com/GabrielTernesSan">🐈‍⬛ GitHub</a></li>
+        <li class="contato-item"><a href="gabriel.ternes@hotmail.com">✉️ Email</a></li>
       </div>
     </main>
 </body>
