--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <div class="titulo">
           <h1>Gabriel Ternes</h1>
           <h3>Estudante de Desenvolvimento Back-end</h3>
-          <h3>Unilasalle</h3>
-        <div class="linguagens">
-          <h3>Linguagens que estou aprendendo </h3>
-          <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
-          <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-          <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg">
-          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" />
-          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/go/go-original-wordmark.svg">
-          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
-          <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
+          <h3> Tecnólogo em ADS - Unilasalle</h3>
+          <div class="linguagens">
+            <h3>Linguagens que estou aprendendo </h3>
+            <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+            <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+            <img class="linguagens-icon" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+            <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg">
+            <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" />
+            <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/go/go-original-wordmark.svg">
+            <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
+            <img class="linguagens-icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
+          </div>
         </div>
-      </div>
       </div>
       <div class="tema">
         <button onclick="mudaTema()">Alterar tema</button>
